Publish ninth post skeleton: The local LLM and the API

--- a/index.html
+++ b/index.html
@@ -127,6 +127,18 @@
                     <span>15 min read</span>
                 </div>
             </a>
+
+            <!-- Article Card 9 -->
+            <a href="post-9.html" class="card fade-up delay-8">
+                <div class="card-tag">Engineering</div>
+                <h3 class="card-title">The local LLM and the API: stream-of-consciousness vs everything else</h3>
+                <p class="card-desc">How we balance local processing for fast stream-of-consciousness against powerful
+                    API models.</p>
+                <div class="card-meta">
+                    <span>Sep 18, 2025</span>
+                    <span>10 min read</span>
+                </div>
+            </a>
         </div>
     </section>
 
