Update Projects to Posts in navigation and section headers

--- a/post-2.html
+++ b/post-2.html
@@ -15,7 +15,7 @@
         <div class="logo">Amy Jerkovich</div>
         <div class="nav-links">
             <a href="index.html">Home</a>
-            <a href="index.html#projects" class="active">Projects</a>
+            <a href="index.html#posts" class="active">Posts</a>
             <a href="about.html">About</a>
         </div>
     </nav>
