--- a/about.html
+++ b/about.html
@@ -74,7 +74,7 @@
         <div class="logo">Amy Jerkovich</div>
         <div class="nav-links">
             <a href="index.html">Home</a>
-            <a href="index.html#projects">Projects</a>
+            <a href="index.html#posts">Posts</a>
             <a href="about.html" class="active">About</a>
         </div>
     </nav>
