--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="logo">Amy Jerkovich</div>
         <div class="nav-links">
             <a href="index.html" class="active">Home</a>
-            <a href="index.html#projects">Projects</a>
+            <a href="index.html#posts">Posts</a>
             <a href="about.html">About</a>
         </div>
     </nav>
@@ -29,8 +29,8 @@
         </div>
     </header>
 
-    <section id="projects">
-        <h2 class="section-title">Recent Projects & Thoughts</h2>
+    <section id="posts">
+        <h2 class="section-title">Recent Posts & Thoughts</h2>
         <div class="grid">
             <!-- Article Card 1 -->
             <a href="post-template.html" class="card fade-up">
