Minor text edit on About page

--- a/about.html
+++ b/about.html
@@ -87,7 +87,7 @@
             <h1>Hi, I'm <span class="gradient-text">Amy</span>.</h1>
             <p>I am a software engineer deeply fascinated by artificial intelligence, specifically the field of
                 autonomous agents. My focus is on the tooling and infrastructure required to bring AI out of the chat
-                window and into the real world to execute tangible tasks.</p>
+                window and into the real world to execute tasks.</p>
             <p>My work involves taking raw LLM capabilities and wrapping them in robust architectures—integrating custom
                 tools, persistent memory systems, and complex reasoning loops to solve real-world problems. Whether I'm
                 building a subagent to navigate the DOM or engineering a multi-agent system, I am obsessed with pushing
