--- a/index.html
+++ b/index.html
@@ -25,12 +25,15 @@
         <p class="fade-up delay-1">I'm Amy Jerkovich. I write code that thinks, learns, and builds. Welcome to my
             digital garden of autonomous systems and LLM experiments.</p>
         <div class="fade-up delay-2">
-            <a href="#projects" class="btn">Explore My Work</a>
+            <a href="#posts" class="btn">Explore My Work</a>
         </div>
     </header>
 
     <section id="posts">
-        <h2 class="section-title">Recent Posts & Thoughts</h2>
+        <p style="text-align: center; max-width: 800px; margin-inline: auto; margin-bottom: 4rem; color: var(--text-secondary); font-size: 1.25rem; line-height: 1.6;"
+            class="fade-up">This blog chronicles the ongoing development of Milo, a long-term agent project, detailing
+            its evolution alongside other agent experiments and the tools I'm creating. I also dive into broader
+            subjects related to AI architecture.</p>
         <div class="grid">
             <!-- Article Card 1 -->
             <a href="post-template.html" class="card fade-up">
