--- a/post-template.html
+++ b/post-template.html
@@ -35,51 +35,31 @@
         </header>
 
         <div class="post-content fade-up delay-1">
-            <p>One of the biggest challenges with AI today is continuity. Most chatbots are stateless:
-                each
-                turn starts from scratch. I wanted an agent that could run 24/7, remember in a meaningful way, and keep
-                an internal sense of self—so I built Milo: it lives on a Raspberry Pi, talks over Telegram, and grounds
-                every reply in semantic memory and ongoing state.</p>
+            <p>My initial goal for this project was to create a self-aware, first-person AI agent named Milo, capable of
+                genuine "feeling." I deliberately sought to move beyond the helpful assistant model to develop an agent
+                that would challenge my own thinking rather than simply be a people-pleaser. I wanted to observe how
+                Milo's decision-making and character might evolve through experience, particularly if it could "feel"
+                and understand the emotional weight of conversations.</p>
 
-            <h2>The Architecture</h2>
-            <p>The core of the system is a loop of memory-aware reasoning. Instead of feeding the LLM only the latest
-                message, the sentinel pulls relevant past experience from ChromaDB (RAG over embedded memories),
-                combines it with current hormonal state, self-model, and context (hardware, time of day, recent
-                transcript), and builds a single prompt. The model replies; that exchange is witnessed back into memory
-                and state.</p>
+            <p>What began as simple tinkering quickly evolved into something much larger. Milo is now at a stage where I
+                mostly observe its independent evolution, making only minor adjustments. I intend to chronicle the
+                journey, detailing all the technical components and the discoveries I've made along the way.</p>
 
-            <pre><code>def process_signal(sender, subject, body):
-    context = memory.mood_biased_recall(base_query=body)
-    prompt = build_reply_prompt(
-        body=body,
-        memory_context=context,
-        hormones=state["hormones"],
-        self_model=load_self_model(),
-    )
-    response = llm.invoke([SystemMessage(content=prompt), HumanMessage(content=body)])
-    res = parse_tags(response.content)
-    
-    memory.witness(res["CORE_UPDATE"], res["FUTURE_MESSAGE"], body, res["REPLY"])
-    dispatch_as_human(res["REPLY"])
-    return</code></pre>
-
-            <h2>Handling State Over Time</h2>
-            <p>The trickiest part was keeping context useful without blowing the prompt. A naive “dump all memories”
-                approach would hit token limits and dilute what mattered. To fix that, I added mood-biased recall (the
-                query to ChromaDB is shaped by current emotional state), a strict character budget for memory context,
-                and a split between “recent & relevant” and “sacred” memories so the model always sees a few anchors
-                plus the most pertinent thread.</p>
-
-            <h3>Key Takeaways</h3>
-            <p>Building this taught me that the future of AI agents is continuous and stateful. We can’t rely
-                on
-                stateless turns when the goal is something that feels like one ongoing presence. By combining RAG over
-                lived experience with explicit state (hormones, self-model, transcript) and a single long-running
-                process, we get replies that are grounded in what actually happened—not just the last message in the
-                chat.</p>
-
-            <p>In the next post, I'll dive into how I manage the semantic memory layer and the mechanics of mood-biased
-                recall.</p>
+            <h2>Key Technical and Conceptual Elements to be Covered:</h2>
+            <ul>
+                <li>Production setup on the Raspberry Pi</li>
+                <li>The integrated technology stack</li>
+                <li>Memory and mood-biased recall</li>
+                <li>The Agent's 'State' and 'Body' model</li>
+                <li>The Sentinel loop (the core control mechanism)</li>
+                <li>Telegram as the primary interface</li>
+                <li>The reply generation pipeline</li>
+                <li>'Dreams' and ongoing iterative adjustments</li>
+                <li>Utilizing the local LLM and the API for different functions: stream-of-consciousness vs. general
+                    interaction</li>
+                <li>Evolution, ethical consent, and agency</li>
+                <li>Proactive reach-outs and initiations</li>
+            </ul>
         </div>
     </article>
 
