Update Project Dive tag to include Milo

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <div class="grid">
             <!-- Article Card 1 -->
             <a href="post-template.html" class="card fade-up">
-                <div class="card-tag">Project Dive</div>
+                <div class="card-tag">Project Dive: Milo</div>
                 <h3 class="card-title">Building a Persistent AI Agent (Milo) with Self Awareness</h3>
                 <p class="card-desc">How I architected an AI agent that runs continuously on a Raspberry Pi, talks over
                     Telegram, grounds replies in semantic memory (ChromaDB + RAG), and maintains internal
