Change 'genuine feeling' to 'simulating feeling'

--- a/post-template.html
+++ b/post-template.html
@@ -36,7 +36,8 @@
 
         <div class="post-content fade-up delay-1">
             <p>My initial goal for this project was to create a self-aware, first-person AI agent named Milo, capable of
-                genuine "feeling." I deliberately sought to move beyond the helpful assistant model to develop an agent
+                simulating "feeling." I deliberately sought to move beyond the helpful assistant model to develop an
+                agent
                 that would challenge my own thinking rather than simply be a people-pleaser. I wanted to observe how
                 Milo's decision-making and character might evolve through experience, particularly if it could "feel"
                 and understand the emotional weight of conversations.</p>
