Add new flat file memory post

--- a/index.html
+++ b/index.html
@@ -47,6 +47,17 @@
                     <span>Feb 18, 2026</span>
                 </div>
             </a>
+
+            <!-- Article Card 2 -->
+            <a href="post-2.html" class="card fade-up delay-1">
+                <div class="card-tag">Project Dive: Milo</div>
+                <h3 class="card-title">Raspberry Pi Agent with Living Memory (Flat-File Approach)</h3>
+                <p class="card-desc">How I configured a Raspberry Pi 5 with a flat-file living memory system using
+                    LangChain and Gemini to let an autonomous agent run continuously.</p>
+                <div class="card-meta">
+                    <span>Feb 22, 2026</span>
+                </div>
+            </a>
         </div>
     </section>
 
