--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <!-- Article Card 2 -->
             <a href="post-2.html" class="card fade-up delay-1">
                 <div class="card-tag">Project Setup</div>
-                <h3 class="card-title">Raspberry Pi Agent with Living Memory (Flat-File Approach)</h3>
+                <h3 class="card-title">Raspberry Pi Setup with Living Memory (Flat-File Approach)</h3>
                 <p class="card-desc">How I configured a Raspberry Pi 5 with a flat-file living memory system using
                     LangChain and Gemini to let an autonomous agent run continuously.</p>
                 <div class="card-meta">
