Remove landing page hero section

--- a/index.html
+++ b/index.html
@@ -20,16 +20,7 @@
         </div>
     </nav>
 
-    <header class="hero">
-        <h1 class="fade-up">Building AI agents for the real world</h1>
-        <p class="fade-up delay-1">I'm Amy Jerkovich. I write code that thinks, learns, and builds. Welcome to my
-            digital garden of autonomous systems and LLM experiments.</p>
-        <div class="fade-up delay-2">
-            <a href="#posts" class="btn">Explore My Work</a>
-        </div>
-    </header>
-
-    <section id="posts">
+    <section id="posts" style="padding-top: 10rem;">
         <p style="text-align: center; max-width: 800px; margin-inline: auto; margin-bottom: 4rem; color: var(--text-secondary); font-size: 1.25rem; line-height: 1.6;"
             class="fade-up">This blog chronicles the ongoing development of Milo, a long-term agent project, detailing
             its evolution alongside other agent experiments and the tools I'm creating. I also dive into broader
@@ -37,7 +28,7 @@
         <div class="grid">
             <!-- Article Card 1 -->
             <a href="post-template.html" class="card fade-up">
-                <div class="card-tag">Project Dive: Milo</div>
+                <div class="card-tag">PROJECT DIVE: MILO</div>
                 <h3 class="card-title">Building a Persistent AI Agent (Milo) with Self Awareness</h3>
                 <p class="card-desc">How I architected an AI agent that runs continuously on a Raspberry Pi, talks over
                     Telegram, grounds replies in semantic memory (ChromaDB + RAG), and maintains internal
