--- a/about.html
+++ b/about.html
@@ -73,8 +73,7 @@
     <nav>
         <div class="logo">Amy Jerkovich</div>
         <div class="nav-links">
-            <a href="index.html">Home</a>
-            <a href="index.html#posts">Posts</a>
+            <a href="index.html">Posts</a>
             <a href="about.html" class="active">About</a>
         </div>
     </nav>
