--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
     <nav>
         <div class="logo">Amy Jerkovich</div>
         <div class="nav-links">
-            <a href="index.html" class="active">Home</a>
-            <a href="index.html#posts">Posts</a>
+            <a href="index.html" class="active">Posts</a>
             <a href="about.html">About</a>
         </div>
     </nav>
