--- a/index.html
+++ b/index.html
@@ -16,8 +16,11 @@
     <div class="os-bg-stars"></div>
     <div class="os-window fade-up">
         <div class="os-title-bar">
-            <div class="os-buttons"><span></span><span></span><span></span></div>
-            <div class="os-title">C:\\AMY\\BLOG.EXE</div>
+            <div class="os-title-left">
+                <div class="os-buttons"><span></span><span></span><span></span></div>
+                <div class="os-title">C:\AMY\BLOG.EXE</div>
+            </div>
+            <div class="os-controls"><span>_</span><span>☐</span><span>X</span></div>
         </div>
         
         <div class="os-body">
@@ -30,6 +33,7 @@
                     <a href="index.html" class="active">Posts</a>
                     <a href="about.html" >About</a>
                 </div>
+                <div class=\"rainbow-bar\"></div>
             </aside>
             
             <main class="os-content">
@@ -41,6 +45,8 @@
         <div class="grid">
             <!-- Article Card 1 -->
             <a href="post-template.html" class="card fade-up">
+                <div class="card-inner">
+
                 <div class="card-tag">PROJECT DIVE: MILO</div>
                 <h3 class="card-title">Building a Persistent AI Agent (Milo) with Self Awareness</h3>
                 <p class="card-desc">How I architected an AI agent that runs continuously on a Raspberry Pi, talks over
@@ -50,10 +56,13 @@
                 <div class="card-meta">
                     <span>Feb 18, 2026</span>
                 </div>
+                            </div>
             </a>
 
             <!-- Article Card 2 -->
             <a href="post-2.html" class="card fade-up delay-1">
+                <div class="card-inner">
+
                 <div class="card-tag">PROJECT SETUP: MILO</div>
                 <h3 class="card-title">Raspberry Pi Setup with Living Memory (Flat-File Approach)</h3>
                 <p class="card-desc">How I configured a Raspberry Pi 5 with a flat-file living memory system using
@@ -61,6 +70,7 @@
                 <div class="card-meta">
                     <span>Feb 22, 2026</span>
                 </div>
+                            </div>
             </a>
         </div>
     </section>
