--- a/post-template.html
+++ b/post-template.html
@@ -15,8 +15,11 @@
     <div class="os-bg-stars"></div>
     <div class="os-window fade-up">
         <div class="os-title-bar">
-            <div class="os-buttons"><span></span><span></span><span></span></div>
-            <div class="os-title">C:\\AMY\\BLOG.EXE</div>
+            <div class="os-title-left">
+                <div class="os-buttons"><span></span><span></span><span></span></div>
+                <div class="os-title">C:\AMY\BLOG.EXE</div>
+            </div>
+            <div class="os-controls"><span>_</span><span>☐</span><span>X</span></div>
         </div>
         
         <div class="os-body">
@@ -29,6 +32,7 @@
                     <a href="index.html" class="active">Posts</a>
                     <a href="about.html" >About</a>
                 </div>
+                <div class=\"rainbow-bar\"></div>
             </aside>
             
             <main class="os-content">
