Fix layout and tag styles on About page for retro UI

--- a/about.html
+++ b/about.html
@@ -39,9 +39,8 @@
             <main class="os-content">
                 <div class="about-layout">
                     <!-- We will generate an image here -->
-                    <img class="about-image fade-up" src="assets/profile.jpg" alt="Amy Jerkovich"
-                        style="display: block; object-fit: cover; object-position: 20% 20%;">
-                    <div class="about-content fade-up delay-1">
+                    <img class="about-image" src="assets/profile.jpg" alt="Amy Jerkovich">
+                    <div class="about-content">
                         <h1>Hi, I'm <span class="gradient-text">Amy</span>.</h1>
                         <p>I am a software engineer deeply fascinated by artificial intelligence, specifically the field
                             of
@@ -61,25 +60,16 @@
                             of building
                             AI tooling right here.</p>
 
-                        <h2 style="margin-top: 2rem; margin-bottom: 1rem; color: var(--text-primary);">Core Stack</h2>
-                        <div style="display: flex; gap: 1rem; flex-wrap: wrap;">
-                            <span
-                                style="background: var(--accent-soft); color: var(--accent-color); padding: 0.5rem 1rem; border-radius: 6px; border: 1px solid rgba(99, 102, 241, 0.2); font-weight: 500;">Python</span>
-                            <span
-                                style="background: var(--accent-soft); color: var(--accent-color); padding: 0.5rem 1rem; border-radius: 6px; border: 1px solid rgba(99, 102, 241, 0.2); font-weight: 500;">Flask</span>
-                            <span
-                                style="background: var(--accent-soft); color: var(--accent-color); padding: 0.5rem 1rem; border-radius: 6px; border: 1px solid rgba(99, 102, 241, 0.2); font-weight: 500;">LangChain</span>
-                            <span
-                                style="background: var(--accent-soft); color: var(--accent-color); padding: 0.5rem 1rem; border-radius: 6px; border: 1px solid rgba(99, 102, 241, 0.2); font-weight: 500;">LLM
-                                Ops</span>
-                            <span
-                                style="background: var(--accent-soft); color: var(--accent-color); padding: 0.5rem 1rem; border-radius: 6px; border: 1px solid rgba(99, 102, 241, 0.2); font-weight: 500;">ChromaDB</span>
-                            <span
-                                style="background: var(--accent-soft); color: var(--accent-color); padding: 0.5rem 1rem; border-radius: 6px; border: 1px solid rgba(99, 102, 241, 0.2); font-weight: 500;">Gemini</span>
-                            <span
-                                style="background: var(--accent-soft); color: var(--accent-color); padding: 0.5rem 1rem; border-radius: 6px; border: 1px solid rgba(99, 102, 241, 0.2); font-weight: 500;">RAG</span>
-                            <span
-                                style="background: var(--accent-soft); color: var(--accent-color); padding: 0.5rem 1rem; border-radius: 6px; border: 1px solid rgba(99, 102, 241, 0.2); font-weight: 500;">LocalLLM</span>
+                        <h2 style="margin-top: 2rem; margin-bottom: 1rem;">Core Stack</h2>
+                        <div class="stack-tags">
+                            <span class="retro-tag">Python</span>
+                            <span class="retro-tag">Flask</span>
+                            <span class="retro-tag">LangChain</span>
+                            <span class="retro-tag">LLM Ops</span>
+                            <span class="retro-tag">ChromaDB</span>
+                            <span class="retro-tag">Gemini</span>
+                            <span class="retro-tag">RAG</span>
+                            <span class="retro-tag">LocalLLM</span>
                         </div>
                     </div>
                 </div>
