--- a/index.html
+++ b/index.html
@@ -44,40 +44,52 @@
                         its evolution alongside other agent experiments and the tools I'm creating. I also dive into
                         broader
                         subjects related to AI architecture.</p>
-                    <div class="grid">
-                        <!-- Article Card 1 -->
-                        <a href="post-template.html" class="card fade-up">
-                            <div class="card-inner">
+                    <div class="post-index-layout">
+                        <aside class="date-index">
+                            <h3>Index</h3>
+                            <ul>
+                                <li><a href="#post-2">Feb 22, 2026</a></li>
+                                <li><a href="#post-1">Feb 18, 2026</a></li>
+                            </ul>
+                        </aside>
 
-                                <div class="card-tag">PROJECT DIVE: MILO</div>
-                                <h3 class="card-title">Building a Persistent AI Agent (Milo) with Self Awareness</h3>
-                                <p class="card-desc">How I architected an AI agent that runs continuously on a Raspberry
-                                    Pi, talks over
-                                    Telegram, grounds replies in semantic memory (ChromaDB + RAG), and maintains
-                                    internal
-                                    state—hormones, self-model, dreams, and tinkering—so it behaves like a single
-                                    ongoing presence
-                                    rather than stateless chat.</p>
-                                <div class="card-meta">
-                                    <span>Feb 18, 2026</span>
+                        <div class="grid">
+                            <!-- Article Card 2 -->
+                            <a href="post-2.html" id="post-2" class="card fade-up">
+                                <div class="card-inner">
+                                    <div class="card-tag">PROJECT SETUP: MILO</div>
+                                    <h3 class="card-title">Raspberry Pi Setup with Living Memory (Flat-File Approach)
+                                    </h3>
+                                    <p class="card-desc">How I configured a Raspberry Pi 5 with a flat-file living
+                                        memory
+                                        system using
+                                        LangChain and Gemini to let an autonomous agent run continuously.</p>
+                                    <div class="card-meta">
+                                        <span>Feb 22, 2026</span>
+                                    </div>
                                 </div>
-                            </div>
-                        </a>
+                            </a>
 
-                        <!-- Article Card 2 -->
-                        <a href="post-2.html" class="card fade-up delay-1">
-                            <div class="card-inner">
-
-                                <div class="card-tag">PROJECT SETUP: MILO</div>
-                                <h3 class="card-title">Raspberry Pi Setup with Living Memory (Flat-File Approach)</h3>
-                                <p class="card-desc">How I configured a Raspberry Pi 5 with a flat-file living memory
-                                    system using
-                                    LangChain and Gemini to let an autonomous agent run continuously.</p>
-                                <div class="card-meta">
-                                    <span>Feb 22, 2026</span>
+                            <!-- Article Card 1 -->
+                            <a href="post-template.html" id="post-1" class="card fade-up delay-1">
+                                <div class="card-inner">
+                                    <div class="card-tag">PROJECT DIVE: MILO</div>
+                                    <h3 class="card-title">Building a Persistent AI Agent (Milo) with Self Awareness
+                                    </h3>
+                                    <p class="card-desc">How I architected an AI agent that runs continuously on a
+                                        Raspberry
+                                        Pi, talks over
+                                        Telegram, grounds replies in semantic memory (ChromaDB + RAG), and maintains
+                                        internal
+                                        state—hormones, self-model, dreams, and tinkering—so it behaves like a single
+                                        ongoing presence
+                                        rather than stateless chat.</p>
+                                    <div class="card-meta">
+                                        <span>Feb 18, 2026</span>
+                                    </div>
                                 </div>
-                            </div>
-                        </a>
+                            </a>
+                        </div>
                     </div>
                 </section>
             </main>
