Standardize sidebar across all pages and add paragraph spacing to About page

--- a/post-2.html
+++ b/post-2.html
@@ -31,7 +31,15 @@
                 <!-- Nav Links -->
                 <div class="nav-links">
                     <a href="index.html" class="active">Posts</a>
-                    <a href="about.html" >About</a>
+                    <a href="about.html">About</a>
+                </div>
+                <div class="date-index">
+                    <h3 style="margin-top: 2rem; font-size: 1.2rem; margin-bottom: 1rem; color: var(--text-secondary);">
+                        Timeline</h3>
+                    <ul>
+                        <li><a href="#post-2">Feb 22, 2026</a></li>
+                        <li><a href="post-template.html#post-1">Feb 18, 2026</a></li>
+                    </ul>
                 </div>
                 <div class=\"rainbow-bar\"></div>
             </aside>
