--- a/about.html
+++ b/about.html
@@ -33,6 +33,14 @@
                     <a href="index.html">Posts</a>
                     <a href="about.html" class="active">About</a>
                 </div>
+                <div class="date-index">
+                    <h3 style="margin-top: 2rem; font-size: 1.2rem; margin-bottom: 1rem; color: var(--text-secondary);">
+                        Timeline</h3>
+                    <ul>
+                        <li><a href="#post-2">Feb 22, 2026</a></li>
+                        <li><a href="post-template.html#post-1">Feb 18, 2026</a></li>
+                    </ul>
+                </div>
                 <div class=\"rainbow-bar\"></div>
             </aside>
 
