Update timeline date index to link to post pages

--- a/post-template.html
+++ b/post-template.html
@@ -36,8 +36,8 @@
                     <h3 style="margin-top: 2rem; font-size: 1.2rem; margin-bottom: 1rem; color: var(--text-secondary);">
                         Timeline</h3>
                     <ul>
-                        <li><a href="#post-2">Feb 22, 2026</a></li>
-                        <li><a href="post-template.html#post-1">Feb 18, 2026</a></li>
+                        <li><a href="post-2.html">Feb 22, 2026</a></li>
+                        <li><a href="post-template.html">Feb 18, 2026</a></li>
                     </ul>
                 </div>
                 <div class=\"rainbow-bar\"></div>
