Add new blog post about Tokenizer building and update index.html

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
                     <h3 style="margin-top: 2rem; font-size: 1.2rem; margin-bottom: 1rem; color: var(--text-secondary);">
                         Timeline</h3>
                     <ul>
+                        <li><a href="post-3.html">Feb 24, 2026</a></li>
                         <li><a href="post-2.html">Feb 22, 2026</a></li>
                         <li><a href="post-template.html">Feb 18, 2026</a></li>
                     </ul>
@@ -53,8 +54,22 @@
                         broader
                         subjects related to AI architecture.</p>
                     <div class="grid">
+                        <!-- Article Card 3 -->
+                        <a href="post-3.html" id="post-3" class="card fade-up">
+                            <div class="card-inner">
+                                <div class="card-tag">LLM BUILD</div>
+                                <h3 class="card-title">Setting up a tokenizer</h3>
+                                <p class="card-desc">An LLM never sees text; only integers. Its inputs and outputs are
+                                    all represented as sequences of token IDs. This is why we use a tokenizer to convert
+                                    strings of text into number IDs.</p>
+                                <div class="card-meta">
+                                    <span>Feb 24, 2026</span>
+                                </div>
+                            </div>
+                        </a>
+
                         <!-- Article Card 2 -->
-                        <a href="post-2.html" id="post-2" class="card fade-up">
+                        <a href="post-2.html" id="post-2" class="card fade-up delay-1">
                             <div class="card-inner">
                                 <div class="card-tag">PROJECT SETUP: MILO</div>
                                 <h3 class="card-title">Raspberry Pi Setup with Living Memory (Flat-File Approach)
