Apply user manual typo and content fixes to post-3.html and index.html

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                         <!-- Article Card 3 -->
                         <a href="post-3.html" id="post-3" class="card fade-up">
                             <div class="card-inner">
-                                <div class="card-tag">LLM BUILD</div>
+                                <div class="card-tag">SETTING UP A TOKENIZER: LLM BUILD</div>
                                 <h3 class="card-title">Setting up a tokenizer</h3>
                                 <p class="card-desc">An LLM never sees text; only integers. Its inputs and outputs are
                                     all represented as sequences of token IDs. This is why we use a tokenizer to convert
