--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
                         Timeline</h3>
                     <ul>
                         <li><a href="post-3.html">Feb 24, 2026</a></li>
+                        <li><a href="post-4.html">Feb 23, 2026</a></li>
                         <li><a href="post-2.html">Feb 22, 2026</a></li>
                         <li><a href="post-template.html">Feb 18, 2026</a></li>
                     </ul>
@@ -64,6 +65,19 @@
                                     strings of text into number IDs.</p>
                                 <div class="card-meta">
                                     <span>Feb 24, 2026</span>
+                                </div>
+                            </div>
+                        </a>
+
+                        <!-- Article Card 4 -->
+                        <a href="post-4.html" id="post-4" class="card fade-up">
+                            <div class="card-inner">
+                                <div class="card-tag">PROJECT DIVE: LLM BUILD</div>
+                                <h3 class="card-title">Building an LLM from scratch</h3>
+                                <p class="card-desc">My pipeline plan for learning the inner workings of a large
+                                    language model by building one from scratch.</p>
+                                <div class="card-meta">
+                                    <span>Feb 23, 2026</span>
                                 </div>
                             </div>
                         </a>
