--- a/post-2.html
+++ b/post-2.html
@@ -38,6 +38,7 @@
                         Timeline</h3>
                     <ul>
                         <li><a href="post-3.html">Feb 24, 2026</a></li>
+                        <li><a href="post-4.html">Feb 23, 2026</a></li>
                         <li><a href="post-2.html">Feb 22, 2026</a></li>
                         <li><a href="post-template.html">Feb 18, 2026</a></li>
                     </ul>
