--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                         <li><a href="post-template.html">Feb 18, 2026</a></li>
                     </ul>
                 </div>
-                <div class=\"rainbow-bar\"></div>
+                <div class="rainbow-bar"></div>
             </aside>
 
             <main class="os-content">
