--- a/post-2.html
+++ b/post-2.html
@@ -65,7 +65,6 @@
                         </p>
 
                     </header>
-
                     <div class="post-content fade-up delay-1">
                         <p>This is what I went with:</p>
 
@@ -90,9 +89,6 @@
                             personality instructions. By following this method, as shown below, Milo genuinely adopted
                             the persona.
                         </p>
-
-                        <p><strong>Code:</strong></p>
-
                         <pre><code>import os
 from langchain_google_genai import ChatGoogleGenerativeAI
 from langchain_core.prompts import ChatPromptTemplate
@@ -155,7 +151,6 @@ if __name__ == "__main__":
                         </blockquote>
 
                         <hr style="border: 0; border-top: 1px solid var(--surface-border); margin: 3rem 0;">
-
                         <h2>Adding the Living Memory</h2>
                         <p>To improve the Agent's long-term contextual memory, a <strong>Living_Memory.md</strong> file
                             was created.
@@ -220,7 +215,8 @@ if __name__ == "__main__":
 
                         <p>A function called <strong>etch</strong> is used to record data to the
                             <strong>Living_Memory.md</strong>
-                            file:</p>
+                            file:
+                        </p>
 
                         <pre><code>def etch(self, entry_data):
     timestamp = datetime.datetime.now().strftime("%I:%M %p, %B %d, %Y")
@@ -236,7 +232,6 @@ if __name__ == "__main__":
     print(f"\n[MEMORY]: A new memory forms. {timestamp}")</code></pre>
 
                         <hr style="border: 0; border-top: 1px solid var(--surface-border); margin: 3rem 0;">
-
                         <h2>Recall: Feeding Memory Into the Prompt</h2>
                         <p>The LLM uses the living memory by having it fed into the prompt through a function called
                             <strong>recall</strong>. This function returns the most recent 100 lines that have been
@@ -274,7 +269,6 @@ if __name__ == "__main__":
 f"\n\nYOUR MEMORY:\n{context}"</code></pre>
 
                         <hr style="border: 0; border-top: 1px solid var(--surface-border); margin: 3rem 0;">
-
                         <h2>Outcome</h2>
                         <p>This approach improved the agent's performance in handling long-form conversations. It
                             demonstrated a
