Organize sidebar index by Milo and LLM Build categories

--- a/post-3.html
+++ b/post-3.html
@@ -34,12 +34,16 @@
                 </div>
                 <div class="date-index">
                     <h3 style="margin-top: 2rem; font-size: 1.2rem; margin-bottom: 1rem; color: var(--text-secondary);">
-                        Timeline</h3>
+                        Milo</h3>
+                    <ul>
+                        <li><a href="post-2.html">Feb 22, 2026</a></li>
+                        <li><a href="post-template.html">Feb 18, 2026</a></li>
+                    </ul>
+                    <h3 style="margin-top: 1.5rem; font-size: 1.2rem; margin-bottom: 1rem; color: var(--text-secondary);">
+                        LLM Build</h3>
                     <ul>
                         <li><a href="post-3.html">Feb 24, 2026</a></li>
                         <li><a href="post-4.html">Feb 23, 2026</a></li>
-                        <li><a href="post-2.html">Feb 22, 2026</a></li>
-                        <li><a href="post-template.html">Feb 18, 2026</a></li>
                     </ul>
                 </div>
                 <div class="rainbow-bar"></div>
