Add Projects header above sidebar categories

--- a/post-3.html
+++ b/post-3.html
@@ -33,7 +33,9 @@
                     <a href="about.html">About</a>
                 </div>
                 <div class="date-index">
-                    <h3 style="margin-top: 2rem; font-size: 1.2rem; margin-bottom: 1rem; color: var(--text-secondary);">
+                    <h3 style="margin-top: 2rem; font-size: 1.4rem; margin-bottom: 1.5rem; color: var(--text-main);">
+                        Projects</h3>
+                    <h3 style="font-size: 1.2rem; margin-bottom: 1rem; color: var(--text-secondary);">
                         Milo</h3>
                     <ul>
                         <li><a href="post-2.html">Feb 22, 2026</a></li>
